<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bukit</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registro">Registro</string>
    <string name="title_activity_central">Mapa</string>
    <string name="title_activity_crear_marker">Crear Publicación</string>
    <string name="title_activity_help">Ayuda</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_acerca__de">Acerca De</string>
    <string name="title_activity_mis__pins">Mis Publicaciones</string>

    <!-- Menu -->
    <string name="search_title">Buscar Aca</string>
    <string name="drawer_icon">Drawer</string>
    <string name="sort_icon">Filtrar</string>

    <!-- Login -->
    <string name="Login_Usuario">Usuario UC</string>
    <string name="Login_Entrar">Entrar</string>
    <string name="Login_Registrarse">Registrarme</string>

    <!-- Registro -->
    <string name="Registro_Titulo_Registro">Registro!!!</string>
    <string name="Registro_Nombre">Nombre Completo</string>
    <string name="Registro_CorreoUC">Correo UC</string>
    <string name="Registro_Password">Contraseña</string>
    <string name="Registro_ConfirmPassword">Confirmar Contraseña</string>
    <string name="Registro_Aceptar">Aceptar</string>

    <!-- NombreMetodos -->
    <string name="Metodo_Registro">Registrarme</string>
    <string name="Metodo_Login">Login</string>
    <string name="Metodo_LimpiarCasilla">LimpiarCasilla</string>
    <string name="Metodo_AceptarRegistro">Aceptar</string>

    <!-- Marker Options -->

    <string name="MarkerOptions_Ramo">Buscar Ramo</string>
    <string name="MarkerOptions_Ayuadntias">Ayudantía</string>
    <string name="MarkerOptions_Clase">Ramo</string>
    <string name="MarkerOptions_Dudas">Duda de Ejercicio</string>
    <string name="MarkerOptions_Descripcion">Escriba una descripción</string>

    <!-- Help -->
    <string name="Help_comofunciona">¿Cómo Funciona?</string>
    <string name="Help_comofuncionarespuesta">
        \t  Cuando quieras tener una clase particular de algún curso de la universidad
    deja apretado en el mapa el lugar en donde quieres que se te realice la clase. Automaticamente se abrirá una nueva ventana donde se pedirá toda la información necesaria
    (curso,fecha, hora, dispuesto a pagar, etc). Desde ahí en adelante las personas que usen la aplicación podrán acceder a ver tu clase.</string>
    <string name="Help_comofunciona_contacto">¿Cómo me contactan?</string>
    <string name="Help_comofunciona_contactorespuesta">
        \t Una vez que tu clase se encuentre publicada estará visible para todas las personas que usen la aplicación.
        Las demás personas podrán acceder automaticamente a la información contenida en ella al hacer click en tú publicación. Ahí tedrán la opción de
        enviarte un mail o un whatsapp directamente (Si tienes activado la opción de whatsapp).
    </string>
    <string name="Help_comofunciona_eliminar">¿Cómo elimino una clase?</string>
    <string name="Help_comofunciona_eliminarrespuesta">
        \t Todas tus clases se encontrarán en la pestaña Mis Pins, la cuál te permitirá
        poder eliminar las clases que hayas creado o las que ya hayan sido realizadas. \n
    </string>

    <!-- Mapa -->
    <string name="SignoMas">+</string>
    <string name="title_activity_maps">Map</string>

    <!-- FB Configuracion -->
    <string name="facebook_app_id">1396273664015950</string>

    <!-- Feedback -->

    <string name="feedback_gracias"> \t Si tienes alguna sugerencia, comentario o duda acerca de la aplicación porfavor no dudes en escribirnos</string>
    <string name="feedback_boton">Enviar</string>
    <string name="feedbackmenu_enviar">Enviar</string>

    <!-- Datos Gmail Aplicacion -->
    <string name="mailaplicacion">\"bookit.servidor@gmail.com\"</string>
    <string name="clave_mail_aplicacion">\"mamamia123\"</string>
    <string name="title_activity_modo_lista">Lista Publicaciones</string>

    <!-- Navigation Drawer -->
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Mapa</item>
        <item>Mi Perfil</item>
        <item>Mis Pins</item>
        <item>¿Cómo Funciona?</item>
        <item>Escríbenos</item>
        <item>Acerca De</item>
        <item>Cerrar Sesión</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_action_mapa</item>
        <item>@drawable/ic_action_perfil</item>
        <item>@drawable/ic_action_pin</item>
        <item>@drawable/ic_action_help</item>
        <item>@drawable/ic_action_writeus</item>
        <item>@drawable/ic_action_about</item>
        <item>@drawable/ic_action_logout</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_modo_lista__info_pin">Descripcion</string>
    <string name="hello_world">Hello world!</string>
    <string name="facebookLoginExplanation">Nunca publicaremos nada en tu cuenta</string>

    <string name="title_activity_editar__perfil">Editar Perfil</string>

    <!-- Editar Perfil -->

    <string-array name="universidades">
        <item>Pontificia Universidad Católica de Chile</item>
        <item>Universidad de Chile</item>
        <item>Pontificia Universidad Católica de Chile</item>
        <item>Universidad de Concepción</item>
        <item>Pontificia Universidad Católica de Valparaíso</item>
        <item>Universidad Austral de Chile</item>
        <item>Universidad de Talca</item>
        <item>Universidad Técnica Federico Santa María</item>
        <item>Universidad de La Frontera</item>
        <item>Universidad Diego Portales</item>
        <item>Universidad Católica del Norte</item>
        <item>Universidad Adolfo Ibáñez</item>
        <item>Universidad Andrés Bello</item>
        <item>Universidad de Santiago de Chile</item>
        <item>Universidad del Bío-Bío</item>
        <item>Universidad de Valparaíso</item>
        <item>Universidad de los Andes</item>
        <item>Universidad de Tarapacá</item>
        <item>Universidad de La Serena</item>
        <item>Universidad Alberto Hurtado</item>
        <item>Universidad del Desarrollo</item>
        <item>Universidad de Antofagasta</item>
        <item>Universidad de Los Lagos</item>
        <item>Universidad Mayor</item>
        <item>Universidad Metropolitana de Ciencias de la Educación</item>
        <item>Universidad Católica de Temuco</item>
        <item>Universidad Tecnológica Metropolitana</item>
        <item>Universidad de Magallanes</item>
        <item>Universidad Arturo Prat</item>
        <item>Universidad de Atacama</item>
        <item>Universidad Católica de la Santísima Concepción</item>
        <item>Universidad Católica del Maule</item>
        <item>Universidad Santo Tomás</item>
        <item>Universidad Central de Chile</item>
        <item>Universidad San Sebastián</item>
        <item>Universidad Adventista de Chile</item>
        <item>Universidad de Playa Ancha</item>
        <item>Universidad Finis Terrae</item>
        <item>Universidad de Artes, Ciencias y Comunicación</item>
        <item>Universidad Viña del Mar</item>
        <item>Universidad Tecnológica de Chile Inacap</item>
        <item>Universidad Católica Silva Henríquez</item>
        <item>Universidad Academia de Humanismo Cristiano</item>
        <item>Universidad de Artes y Ciencias Sociales</item>
        <item>Universidad Autónoma de Chile</item>
        <item>Universidad del Pacífico</item>
        <item>Universidad de Las Américas</item>
        <item>Universidad Gabriela Mistral</item>
        <item>Universidad Bernardo OHiggins</item>
        <item>Universidad Ciencias de la Informática</item>
        <item>Universidad Internacional SEK</item>
        <item>Universidad del Mar</item>
        <item>Universidad Pedro de Valdivia</item>
        <item>Universidad Bolivariana</item>
        <item>Universidad Iberoamericana de Ciencias y Tecnología</item>
        <item>Universidad La República</item>
        <item>Universidad de Aconcagua</item>
        <item>Universidad Los Leones</item>
        <item>Universidad Chileno-Británica de Cultura</item>
        <item>Universidad Miguel de Cervantes</item>
        <item>Universidad La Araucana</item>
    </string-array>


    <string name="acerca_de_texto">Bukit fue creado por:\n
    \tEnrique Correa (@ejcorreav)\n
    \tCarlos Aguirre (@c_aguirre)\n
        \n
    Iconos por:\n
    \tBenjamin Abarca
    </string>
    <string name="sin_informacion">Sin información</string>
    <string name="title_activity_solicitudes">Solicitudes</string>
    <string name="title_activity_app_intro">AppIntro</string>
    <string name="title_activity_app__intro">Introducción</string>

</resources>