<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.aplicacionbookit.Help" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/Help_comofunciona"
                    android:id="@+id/ayuda_comofunciona"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Help_comofuncionarespuesta"
                    android:id="@+id/probando"
                    android:layout_marginTop="5dp"
                    android:textSize="17dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_marginTop="10dp"
                    android:text="@string/Help_comofunciona_contacto"
                    android:id="@+id/ayuda_comocontactarse"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Help_comofunciona_contactorespuesta"
                    android:id="@+id/ayuda_comocontactarse_respuesta"
                    android:layout_marginTop="5dp"
                    android:textSize="17dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_marginTop="10dp"
                    android:text="@string/Help_comofunciona_eliminar"
                    android:id="@+id/ayuda_comoeliminar"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Help_comofunciona_eliminarrespuesta"
                    android:id="@+id/ayuda_comoeliminar_respuesta"
                    android:layout_marginTop="5dp"
                    android:textSize="17dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
