<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.aplicacionbookit.Help" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/Help_comofunciona"
                    android:id="@+id/ayuda_comofunciona"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Help_comofuncionarespuesta"
                    android:id="@+id/probando"
                    android:layout_marginTop="5dp"
                    android:textSize="17dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_marginTop="10dp"
                    android:text="@string/Help_comofunciona_contacto"
                    android:id="@+id/ayuda_comocontactarse"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Help_comofunciona_contactorespuesta"
                    android:id="@+id/ayuda_comocontactarse_respuesta"
                    android:layout_marginTop="5dp"
                    android:textSize="17dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_marginTop="10dp"
                    android:text="@string/Help_comofunciona_eliminar"
                    android:id="@+id/ayuda_comoeliminar"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Help_comofunciona_eliminarrespuesta"
                    android:id="@+id/ayuda_comoeliminar_respuesta"
                    android:layout_marginTop="5dp"
                    android:textSize="17dp" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Volver"
                    android:onClick="Prueba"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_button"
                    android:layout_gravity="right" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
